--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
 		<h2 class="hidden">Icons</h2>
 
 		<div class="wrapper">
-			<img src="assets/svg/arrow.svg" alt="vector arrow">
+			<img id="arrow" src="assets/svg/arrow.svg" alt="vector arrow">
 		</div>
 
 		<div class="wrapper">
-			<img src="assets/svg/bubbles.svg" alt="vector bubbles">
+			<img id="bubbles" src="assets/svg/bubbles.svg" alt="vector bubbles">
 		</div>
 
 		<div class="wrapper">
-			<img src="assets/svg/crosshair.svg" alt="vector crosshair">
+			<img id="crosshair" src="assets/svg/crosshair.svg" alt="vector crosshair">
 		</div>
 
 		<div class="wrapper">
-			<img src="assets/svg/double_flags.svg" alt="vector double flags">
+			<img id="doubleFlag" src="assets/svg/double_flags.svg" alt="vector double flags">
 		</div>
 
 		<div class="wrapper">
-			<img src="assets/svg/heart.svg" alt="vector heart">
+			<img id="heart" src="assets/svg/heart.svg" alt="vector heart">
 		</div>
 
 	</section>
@@ -43,23 +43,23 @@
 			<h2 class="hidden">5 icons</h2>
 
 		<div class="wrapper">
-			<img src="assets/svg/lightning.svg" alt="vector lightning">
+			<img id="lightning" src="assets/svg/lightning.svg" alt="vector lightning">
 		</div>
 
 		<div class="wrapper">
-			<img src="assets/svg/plus.svg" alt="vector plus">
+			<img id="plus" src="assets/svg/plus.svg" alt="vector plus">
 		</div>
 
 		<div class="wrapper">
-			<img src="assets/svg/squares.svg" alt="vector squares">
+			<img id="squares" src="assets/svg/squares.svg" alt="vector squares">
 		</div>
 
 		<div class="wrapper">
-			<img src="assets/svg/wave.svg" alt="vector wave">
+			<img id="waves" src="assets/svg/wave.svg" alt="vector wave">
 		</div>
 
 		<div class="wrapper">
-			<img src="assets/svg/weirdlines.svg" alt="vector weird lines">
+			<img id="weirdLines" src="assets/svg/weirdlines.svg" alt="vector weird lines">
 		</div>
 		
 	</section>
